add last meeting date and last meetinh update colunm in db and add image in date edit text update data add pan details duration spinner

--- a/app/src/main/res/layout/activity_lead.xml
+++ b/app/src/main/res/layout/activity_lead.xml
@@ -367,6 +367,7 @@
                     android:drawablePadding="@dimen/view_padding"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
+                    android:imeOptions="actionNext"
                     android:hint="@string/hintcity"
                     android:inputType="text"
                     android:maxLength="50"
