type of research and bug is resolved

--- a/app/src/main/res/layout/activity_lead.xml
+++ b/app/src/main/res/layout/activity_lead.xml
@@ -299,7 +299,7 @@
                     android:focusable="true"
                     android:focusableInTouchMode="true"
                     android:hint="@string/hintmobileno"
-                    android:inputType="phone"
+                    android:inputType="number"
                     android:maxLength="10"
                     android:padding="@dimen/view_padding"
                     android:singleLine="true"
