--- a/app/src/main/res/layout/opportunity_table_layout.xml
+++ b/app/src/main/res/layout/opportunity_table_layout.xml
@@ -239,6 +239,7 @@
                 android:drawablePadding="@dimen/view_padding"
                 android:maxLength="50"
                 android:padding="@dimen/view_padding"
+                android:imeOptions="actionDone"
                 android:textColor="@android:color/black" />
         </TableRow>
 
