--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="gray2">#d1cfcf</color>
     <color name="colorGray">#696969</color>
     <color name="colorBlue">#0926e2</color>
+    <color name="list_selected">#455FB6</color>
 </resources>
