--- a/app/src/main/res/layout/product_custom_dialog.xml
+++ b/app/src/main/res/layout/product_custom_dialog.xml
@@ -5,7 +5,7 @@
 
     <LinearLayout
         android:id="@+id/linear_alert"
-        android:layout_width="match_parent"
+        android:layout_width="570dp"
         android:layout_height="600dp"
         android:background="@drawable/customborder"
         android:orientation="vertical">
