city and pincode take single alphabet is done

--- a/app/src/main/res/layout/activity_lead.xml
+++ b/app/src/main/res/layout/activity_lead.xml
@@ -366,6 +366,7 @@
                     android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                     android:drawablePadding="@dimen/view_padding"
                     android:focusable="true"
+                    android:completionThreshold="1"
                     android:focusableInTouchMode="true"
                     android:imeOptions="actionNext"
                     android:hint="@string/hintcity"
@@ -402,6 +403,7 @@
                     android:background="@drawable/edit_background"
                     android:drawablePadding="@dimen/view_padding"
                     android:focusable="true"
+                    android:completionThreshold="1"
                     android:focusableInTouchMode="true"
                     android:hint="@string/hintpincode"
                     android:inputType="number"
