--- a/app/src/main/res/layout/activity_lead_update.xml
+++ b/app/src/main/res/layout/activity_lead_update.xml
@@ -599,6 +599,7 @@
                         android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                         android:drawablePadding="@dimen/view_padding"
                         android:hint="@string/hintcity"
+                        android:completionThreshold="1"
                         android:inputType="text"
                         android:maxLength="50"
                         android:padding="@dimen/view_padding"
@@ -633,6 +634,7 @@
                         android:background="@drawable/edit_background"
                         android:drawablePadding="@dimen/view_padding"
                         android:hint="@string/hintpincode"
+                        android:completionThreshold="1"
                         android:inputType="number"
                         android:imeOptions="actionDone"
                         android:maxLength="6"
