6 Dec Resolved issues

--- a/app/src/main/res/layout/custom_next_meeting_dialog.xml
+++ b/app/src/main/res/layout/custom_next_meeting_dialog.xml
@@ -41,7 +41,7 @@
                 android:background="@android:color/transparent"
                 android:padding="@dimen/view_padding"
                 android:text="x"
-                android:textColor="@color/colorWhite"
+                android:textColor="@color/colorRed"
                 android:textStyle="bold" />
         </RelativeLayout>
 
